fix misalignment of password toggle icon

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/extensions/login.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/extensions/login.less
@@ -144,7 +144,7 @@ input[type="checkbox"]{
 				position : absolute;
 				transform :translate(0,-50%); 
 				top :40%;
-				right: -2px;
+				right: -5px;
 				cursor: pointer;
 			}
 		}
